file trail with reminder ready

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,13 @@ spring.mail.username=your-email@gmail.com
 spring.mail.password=your-email-password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5674
+spring.rabbitmq.username=xyz
+spring.rabbitmq.password=xyz123
+
+rabbitmq.exchange.name=file_trail_exchange
+rabbitmq.queue.reminder.name=reminder_queue
+rabbitmq.binding.routing.key=reminder_routing_key
